--- a/css/app.css
+++ b/css/app.css
@@ -7,17 +7,21 @@ html {
 *::after {
     box-sizing: inherit;
 }
-
+h4 {
+    font-size: 1.5rem;
+    color: black;
+}
 html,
 body {
     width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
+	color:white;
 }
 
 body {
-    background: #ffffff url('../img/geometry2.png'); /* Background pattern from Subtle Patterns */
+    background-image:  url("img1.jpg");
     font-family: 'Coda', cursive;
 }
 
@@ -37,7 +41,7 @@ h1 {
 .deck {
     width: 660px;
     min-height: 680px;
-    background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
+    background: #000d1a;
     padding: 32px;
     border-radius: 10px;
     box-shadow: 12px 15px 20px 0 rgba(46, 61, 73, 0.5);
@@ -51,10 +55,10 @@ h1 {
 .deck .card {
     height: 125px;
     width: 125px;
-    background: #2e3d49;
+    background-image: url('img2.png');
     font-size: 0;
     color: #ffffff;
-    border-radius: 8px;
+    border-radius: 10px;
     cursor: pointer;
     display: flex;
     justify-content: center;
@@ -63,21 +67,68 @@ h1 {
 }
 
 .deck .card.open {
-    transform: rotateY(0);
-    background: #02b3e4;
+
+    background: #02ccba;
     cursor: default;
+
 }
 
 .deck .card.show {
     font-size: 33px;
+	pointer-events : none;
+	pointer : not-allowed;
+	/*-webkit-transition: 0.6s;
+	-webkit-transform-style: preserve-3d;
+	-moz-transition: 0.6s;
+	-moz-transform-style: preserve-3d;
+    -o-transition: 0.6s;
+	-o-transform-style: preserve-3d;
+	transition: 0.6s;
+	transform-style: preserve-3d;*/
+	/*transform: scaleX(-1);*/
+	
+	/*filter: FlipH;
+-ms-filter: "FlipH";*/
+
+	position: relative;
 }
+
 
 .deck .card.match {
     cursor: default;
-    background: #02ccba;
+    background: yellowgreen;
     font-size: 33px;
+		/*transform: scaleX(-1);*/
+}
+.deck .card.unmatch {
+    cursor: default;
+    background: red;
+    font-size: 33px;
+		/*transform: scaleX(-1);*/
+		  animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+  /*transform: translate3d(0, 0, 0);
+  */
+  backface-visibility: hidden;
+  perspective: 1000px;
 }
 
+@keyframes shake {
+  10%, 90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+  
+  20%, 80% {
+    transform: translate3d(2px, 0, 0);
+  }
+
+  30%, 50%, 70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%, 60% {
+    transform: translate3d(4px, 0, 0);
+  }
+}
 
 .score-panel {
     text-align: left;
@@ -95,9 +146,83 @@ h1 {
 .score-panel .stars li {
     list-style: none;
     display: inline-block;
+	color:yellow;
 }
 
 .score-panel .restart {
     float: right;
     cursor: pointer;
+}
+.fa {
+    display: inline-block;
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: inherit;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}.fa1 {
+    display: inline-block;
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: inherit;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+	/*transform: scaleX(-1);*/
+}
+.display
+{
+	display:none;
+}
+.modal-header {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: flex-start;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    padding: 1rem;
+    border-top-left-radius: .3rem;
+    border-top-right-radius: .3rem;
+	    border-bottom: none;
+}
+.modal-body {
+    position: relative;
+    -webkit-box-flex: 1;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    padding: 1rem;
+}
+.modal-footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
+    justify-content: flex-end;
+    padding: 1rem;
+	border-top: none;
+}
+.modal-content1 {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    width: 100%;
+    pointer-events: auto;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid rgba(0,0,0,.2);
+    border-radius: .3rem;
+    outline: 0;
+    align-items: center;
 }
