--- a/css/app.css
+++ b/css/app.css
@@ -98,8 +98,14 @@ h1 {
     cursor: default;
     background: yellowgreen;
     font-size: 33px;
+animation-name:pulse;
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
 		/*transform: scaleX(-1);*/
 }
+
 .deck .card.unmatch {
     cursor: default;
     background: red;
